updated web according to prof's comment on Nov 13

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <td class="px-4 py-3">4</td>
                 <td class="px-4 py-3">Sep 23</td>
                 <td class="px-4 py-3 font-medium">
-                  Policy search
+                  Policy Search
                 </td>
                 <td class="px-4 py-3">Chapter 10, 11</td>
                 <td class="px-4 py-3">
@@ -403,7 +403,7 @@
               <tr>
                 <td class="px-4 py-3">4</td>
                 <td class="px-4 py-3">Sep 25</td>
-                <td class="px-4 py-3 font-medium">Policy gradient optimization</td>
+                <td class="px-4 py-3 font-medium">Policy Gradient Optimization</td>
                 <td class="px-4 py-3">Chapter 10, 11</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day7slides.pdf" target="_blank" rel="noopener">Slides</a>
@@ -428,7 +428,7 @@
               <tr>
                 <td class="px-4 py-3">5</td>
                 <td class="px-4 py-3">Oct 2</td>
-                <td class="px-4 py-3 font-medium">Efficient exploration in bandits</td>
+                <td class="px-4 py-3 font-medium">Bandits continued</td>
                 <td class="px-4 py-3">Chapter 15</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
@@ -516,7 +516,7 @@
               <tr>
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 30</td>
-                <td class="px-4 py-3 font-medium">POMDPs: Value iteration</td>
+                <td class="px-4 py-3 font-medium">POMDPs</td>
                 <td class="px-4 py-3">Chapter 20-23</td>
                 <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day15slides.pdf" target="_blank" rel="noopener">Slides</a></td>
                 <td class="px-4 py-3">
@@ -526,7 +526,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">10</td>
                 <td class="px-4 py-3">Nov 4</td>
-                <td class="px-4 py-3 font-medium">POMDP controller search</td>
+                <td class="px-4 py-3 font-medium">POMDP continued</td>
                 <td class="px-4 py-3">Chapter 20-23</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
@@ -536,7 +536,7 @@
               <tr>
                 <td class="px-4 py-3">10</td>
                 <td class="px-4 py-3">Nov 6</td>
-                <td class="px-4 py-3 font-medium">POMDP: Wrap-up</td>
+                <td class="px-4 py-3 font-medium">POMDP continued</td>
                 <td class="px-4 py-3">Chapter 20-23</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
@@ -547,16 +547,18 @@
                 <td class="px-4 py-3">11</td>
                 <td class="px-4 py-3">Nov 11</td>
                 <td class="px-4 py-3 font-medium">
-                  Games: Markov games
+                  Games
                 </td>
                 <td class="px-4 py-3">Chapter 24, 25</td>
                 <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day16slides.pdf" target="_blank" rel="noopener">Slides</a></td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/BB-5XCarvYLLhlIaAd-0YKLC8dnT4COOe6Pqy2cpA-QcIYRyOjLArKvruKOh-W__.JCb3D82sSH4iH04l"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">11</td>
                 <td class="px-4 py-3">Nov 13</td>
-                <td class="px-4 py-3 font-medium">More games</td>
+                <td class="px-4 py-3 font-medium">Games continued</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -564,7 +566,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 18</td>
-                <td class="px-4 py-3 font-medium">Games: State uncertainty in games</td>
+                <td class="px-4 py-3 font-medium">State Uncertainty in Games</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -572,7 +574,7 @@
               <tr>
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 20</td>
-                <td class="px-4 py-3 font-medium">Project discussion</td>
+                <td class="px-4 py-3 font-medium">Project Discussion</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -596,7 +598,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">14</td>
                 <td class="px-4 py-3">Dec 2</td>
-                <td class="px-4 py-3 font-medium">Project discussion</td>
+                <td class="px-4 py-3 font-medium">Review</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -604,8 +606,16 @@
               <tr>
                 <td class="px-4 py-3">14</td>
                 <td class="px-4 py-3">Dec 4</td>
-                <td class="px-4 py-3 font-medium">Project discussion</td>
+                <td class="px-4 py-3 font-medium">Review</td>
                 <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">—</td>
+              </tr>
+              <tr>
+                <td class="px-4 py-3">15</td>
+                <td class="px-4 py-3">Dec 13 (9 a.m. - 12 p.m.)</td>
+                <td class="px-4 py-3 font-medium">Exam</td>
+                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
