--- a/index.html
+++ b/index.html
@@ -561,7 +561,9 @@
                 <td class="px-4 py-3 font-medium">Games continued</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/c-rukwBtPr-bnxY4C5DtZpYLkMOha5dfXssm4Qc-yoggBjWd4zqo72yHcqW_RGiP.1hnuZiDAP5HecxsX"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">12</td>
@@ -694,8 +696,10 @@
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3 font-medium">HW4</td>
-                <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">Nov 24, 11:59 PM</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_four.pdf" target="_blank" rel="noopener">PDF</a>
+                </td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
                 </td>
