uploaded HW1+HW2 sol and week 12 slides

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 <td class="px-4 py-3">Sep 11</td>
                 <td class="px-4 py-3 font-medium">Probability and Simple Decisions continued</td>
                 <td class="px-4 py-3">Chapter 6</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/2AhXRdYrdRT_UJuvu4CyKuNhBh8oinMabdJHxEiUpTBlMr8Ek-ezM3udf6s9d5Ft.oEX5o1qKFJkse6ZZ"target="_blank" rel="noopener">Recording</a>
               </td>
@@ -430,7 +430,7 @@
                 <td class="px-4 py-3">Oct 2</td>
                 <td class="px-4 py-3 font-medium">Bandits continued</td>
                 <td class="px-4 py-3">Chapter 15</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/TE7f7Iqi5VgEektOZSogQk1mrf2nmeAQdvFbpsWuBoaEwSfcb5jSVSVlTmoqcs8.XMX1v4vZIA6TUcRp"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -464,7 +464,7 @@
                 <td class="px-4 py-3">Oct 14</td>
                 <td class="px-4 py-3 font-medium">Model-free RL continued</td>
                 <td class="px-4 py-3">Chapter 17</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/xoGyUGrNWQQd6EIwgKRIZNusqJIty5pohdhqJr93KU5cNlb_2mgEGad8MncPs7-x._d4HqEcVq3vqF_lp"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -508,7 +508,7 @@
                 <td class="px-4 py-3">Oct 28</td>
                 <td class="px-4 py-3 font-medium">Tasks continued</td>
                 <td class="px-4 py-3">Chapter 18</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/Cfe4xiNIMHcmyMg8ITkWUFYuhTGsuYoppU0IwdkHmfEex3MRCVfAitCLSVY-5Zi3.9ynYydpuRsgjwPhH"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -528,7 +528,7 @@
                 <td class="px-4 py-3">Nov 4</td>
                 <td class="px-4 py-3 font-medium">POMDP continued</td>
                 <td class="px-4 py-3">Chapter 20-23</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/dPM6o_CXke_Uhp2VIPDLuTR82BI77FbFMES1RxYsuo45s3ZGHsCkhTqN1yBa7B8p.hcc1GHqjW-vW-3Gz"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -538,7 +538,7 @@
                 <td class="px-4 py-3">Nov 6</td>
                 <td class="px-4 py-3 font-medium">POMDP continued</td>
                 <td class="px-4 py-3">Chapter 20-23</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/nk6pSJmNGeJS81uSLgpDYNdZMpJvyAciC-Ox6ZuMxSQS0CszNKeajeb70S_vMg.85sEL-xcIwk2aR8l"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -560,7 +560,7 @@
                 <td class="px-4 py-3">Nov 13</td>
                 <td class="px-4 py-3 font-medium">Games continued</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/c-rukwBtPr-bnxY4C5DtZpYLkMOha5dfXssm4Qc-yoggBjWd4zqo72yHcqW_RGiP.1hnuZiDAP5HecxsX"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -570,7 +570,7 @@
                 <td class="px-4 py-3">Nov 18</td>
                 <td class="px-4 py-3 font-medium">State Uncertainty in Games</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day17slides.pdf" target="_blank" rel="noopener">Slides</a></td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
@@ -671,7 +671,9 @@
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_one.pdf" target="_blank" rel="noopener">PDF</a>
                 </td>
                 <td class="px-4 py-3">
-                  <span class="text-slate-400">Available after due date</span>
+                  <span class="text-slate-400">
+                    <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_one_sol.pdf" target="_blank" rel="noopener">PDF</a>
+                  </span>
                 </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
@@ -681,7 +683,9 @@
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_two.pdf" target="_blank" rel="noopener">PDF</a>
                 </td>
                 <td class="px-4 py-3">
-                  <span class="text-slate-400">Available after due date</span>
+                  <span class="text-slate-400">
+                    <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_two_sol.pdf" target="_blank" rel="noopener">PDF</a>
+                  </span>
                 </td>
               </tr>
               <tr>
