--- a/index.html
+++ b/index.html
@@ -571,7 +571,9 @@
                 <td class="px-4 py-3 font-medium">State Uncertainty in Games</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day17slides.pdf" target="_blank" rel="noopener">Slides</a></td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"target="_blank" rel="noopener">Video</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">12</td>
