--- a/index.html
+++ b/index.html
@@ -568,27 +568,29 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 18</td>
-                <td class="px-4 py-3 font-medium">State Uncertainty in Games</td>
+                <td class="px-4 py-3 font-medium">Markov Games</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day17slides.pdf" target="_blank" rel="noopener">Slides</a></td>
                 <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"target="_blank" rel="noopener">Video</a>
+                  <a class="text-brand-700 hover:underline" href="https://www.google.com/url?q=https://drive.google.com/file/d/1pfPhUk6p0Q6mlR08fN9D3H04o_7ev9a7/view?usp%3Dsharing&sa=D&source=editors&ust=1762027413212405&usg=AOvVaw23JXd9zMh0_h4i5_wRAWgt"target="_blank" rel="noopener">Recording (47:32)</a>
                 </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 20</td>
-                <td class="px-4 py-3 font-medium">Project Discussion</td>
-                <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3 font-medium">Markov Games continued</td>
+                <td class="px-4 py-3">Chapter 26, 27</td>
+                <td class="px-4 py-3">&#8593;</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/c-rukwBtPr-bnxY4C5DtZpYLkMOha5dfXssm4Qc-yoggBjWd4zqo72yHcqW_RGiP.1hnuZiDAP5HecxsX"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">13</td>
                 <td class="px-4 py-3">Nov 25</td>
-                <td class="px-4 py-3 font-medium">Abstraction</td>
-                <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3 font-medium">State Uncertainty in Games / Project Discussion</td>
+                <td class="px-4 py-3">Chapter 26, 27</td>
+                <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day18slides.pdf" target="_blank" rel="noopener">Slides</a></td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
