--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">&#8593;</td>
                 <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/c-rukwBtPr-bnxY4C5DtZpYLkMOha5dfXssm4Qc-yoggBjWd4zqo72yHcqW_RGiP.1hnuZiDAP5HecxsX"target="_blank" rel="noopener">Recording</a>
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/YKUEkzvlHl4RJLotXC0qSH6J-VPq2Nzr2vaZM0PmeAtW49XGNwMv3UJ51rrUh7Tw.9AqM4wkCF4NtAV1Z"target="_blank" rel="noopener">Recording</a>
                 </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
@@ -612,7 +612,7 @@
               <tr>
                 <td class="px-4 py-3">14</td>
                 <td class="px-4 py-3">Dec 4</td>
-                <td class="px-4 py-3 font-medium">Review</td>
+                <td class="px-4 py-3 font-medium">Reasoning in LLMs Through RL</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
