--- a/index.html
+++ b/index.html
@@ -591,10 +591,12 @@
                 <td class="px-4 py-3 font-medium">State Uncertainty in Games / Project Discussion</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day18slides.pdf" target="_blank" rel="noopener">Slides</a></td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/F3lnYIQFcInqj3yVnWkfV9qURzbuF_fX-tTeOmEcap-5Pmyvj9v0EOh4OLPIHzAs.L8Vdmq0ae6PTKZ2e"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">13</td>
                 <td class="px-4 py-3">Nov 26–30</td>
                 <td class="px-4 py-3 font-medium">Thanksgiving Recess</td>
                 <td class="px-4 py-3">No classes</td>
@@ -607,7 +609,9 @@
                 <td class="px-4 py-3 font-medium">Review</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/F3lnYIQFcInqj3yVnWkfV9qURzbuF_fX-tTeOmEcap-5Pmyvj9v0EOh4OLPIHzAs.L8Vdmq0ae6PTKZ2e"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">14</td>
