--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 <td class="px-4 py-3">Nov 25</td>
                 <td class="px-4 py-3 font-medium">State Uncertainty in Games / Project Discussion</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
-                <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day18slides.pdf" target="_blank" rel="noopener">Slides</a></td>
+                <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day18slides_.pdf" target="_blank" rel="noopener">Slides</a></td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/F3lnYIQFcInqj3yVnWkfV9qURzbuF_fX-tTeOmEcap-5Pmyvj9v0EOh4OLPIHzAs.L8Vdmq0ae6PTKZ2e"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -610,7 +610,7 @@
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/F3lnYIQFcInqj3yVnWkfV9qURzbuF_fX-tTeOmEcap-5Pmyvj9v0EOh4OLPIHzAs.L8Vdmq0ae6PTKZ2e"target="_blank" rel="noopener">Recording</a>
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/kIRyvfVwFJJ-hqOSqJo8n9AH24RGjetY197Y0cEJwCSs_bnQfSTuiGlIvpDBxCRL.r0S6WenS83Jajb1Y"target="_blank" rel="noopener">Recording</a>
                 </td>
               </tr>
               <tr>
@@ -618,8 +618,10 @@
                 <td class="px-4 py-3">Dec 4</td>
                 <td class="px-4 py-3 font-medium">Reasoning in LLMs Through RL</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day19slides.pdf" target="_blank" rel="noopener">Slides</a></td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/92jVYb7tMAFCqjwc1J_KyhEkqZSbXWcgW7kZvQii_6fNr1Vu62u9QsRa37ougaZH.Z44TIyuURo4IhwM9"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">15</td>
