--- a/index.html
+++ b/index.html
@@ -707,7 +707,9 @@
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_three.pdf" target="_blank" rel="noopener">PDF</a>
                 </td>
                 <td class="px-4 py-3">
-                  <span class="text-slate-400">Available after due date</span>
+                  <span class="text-slate-400">
+                    <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_three_sol.pdf" target="_blank" rel="noopener">PDF</a>
+                  </span>
                 </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
@@ -717,7 +719,9 @@
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_four.pdf" target="_blank" rel="noopener">PDF</a>
                 </td>
                 <td class="px-4 py-3">
-                  <span class="text-slate-400">Available after due date</span>
+                  <span class="text-slate-400">
+                    <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_four_sol.pdf" target="_blank" rel="noopener">PDF</a>
+                  </span>
                 </td>
               </tr>
               <tr>
